--- a/permafrost-ku-enhanced.ipynb
+++ b/permafrost-ku-enhanced.ipynb
@@ -21,23 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "68439fd2-f09e-4f53-bad7-bbbdbc7f3526",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'UnitSystem' from 'gimli' (/home/egp/repos/permafrost_usecase/.venv/lib/python3.10/site-packages/gimli/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mIPython\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdisplay\u001b[39;00m \u001b[39mimport\u001b[39;00m Video\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m \u001b[39mimport\u001b[39;00m trange\n\u001b[0;32m---> 17\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpymt\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m Topography, Era5\n\u001b[1;32m     18\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpermamodel\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcomponents\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mKu\u001b[39;00m \u001b[39mimport\u001b[39;00m Ku_model\n\u001b[1;32m     19\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlandlab\u001b[39;00m \u001b[39mimport\u001b[39;00m RasterModelGrid, imshow_grid\n",
-      "File \u001b[0;32m~/dev/pymt/pymt/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgimli\u001b[39;00m \u001b[39mimport\u001b[39;00m UnitSystem\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_version\u001b[39;00m \u001b[39mimport\u001b[39;00m __version__\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mmodel_collection\u001b[39;00m \u001b[39mimport\u001b[39;00m ModelCollection\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'UnitSystem' from 'gimli' (/home/egp/repos/permafrost_usecase/.venv/lib/python3.10/site-packages/gimli/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import packages \n",
     "import os\n",
@@ -55,8 +42,7 @@
     "from IPython.display import Video\n",
     "from tqdm import trange\n",
     "\n",
-    "from pymt.models import Topography, Era5\n",
-    "from permamodel.components.Ku import Ku_model\n",
+    "from pymt.models import Topography, Era5, KuEnhanced\n",
     "from landlab import RasterModelGrid, imshow_grid\n",
     "from landlab.components import DepthDependentDiffuser\n",
     "\n",
@@ -99,7 +85,16 @@
    "execution_count": 3,
    "id": "fd4679f8-ffa8-49ae-a40c-e8a3e1c88b23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/egp/dev/mambaforge/envs/pfcase/lib/python3.9/site-packages/bmi_topography/api_key.py:49: UserWarning: You are using a demo key to fetch data from OpenTopography, functionality will be limited. See https://bmi-topography.readthedocs.io/en/latest/#api-key for more information.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize Topography data component\n",
     "dem = Topography()\n",
@@ -532,41 +527,103 @@
    "metadata": {},
    "source": [
     "1) Prepare input files\n",
-    "The Ku model configuration file is in cache/Alaska/Ku_example_config.toml. To provide data for each input variable, one can either specify a netCDF file for that variable in the model configuration, or provide \"None\" in the configuration file and set the variable directly."
+    "The Ku model configuration file is in cache/Alaska/Ku_example_config.toml. To provide data for each input variable, one can either specify a netCDF file for that variable in the model configuration, set a scalar value, or leave the input variable blank to set dynamically during the model run."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 101,
    "id": "25b75def-f267-40d2-93ce-27f98fb26a13",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'files'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m Ku \u001b[38;5;241m=\u001b[39m Ku_model()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mKu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minitialize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcache_alaska/Ku_example_config.toml\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/dev/anaconda3/envs/permafrost_usecase/lib/python3.9/site-packages/permamodel/components/Ku.py:146\u001b[0m, in \u001b[0;36mKu_model.initialize\u001b[0;34m(self, config_file)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minitialize\u001b[39m(\u001b[38;5;28mself\u001b[39m, config_file: \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    145\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Initialize the model, read input files, and prepare an object to save results.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 146\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    147\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mread_input_files()\n\u001b[1;32m    148\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconstruct_results()\n",
-      "File \u001b[0;32m~/dev/anaconda3/envs/permafrost_usecase/lib/python3.9/site-packages/permamodel/components/Ku.py:172\u001b[0m, in \u001b[0;36mKu_model.read_config\u001b[0;34m(self, config_file)\u001b[0m\n\u001b[1;32m    169\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgrid_shape \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdomain\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrid_shape\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    171\u001b[0m \u001b[38;5;66;03m# Paths to the input data files\u001b[39;00m\n\u001b[0;32m--> 172\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_files \u001b[38;5;241m=\u001b[39m {var: ncfile \u001b[38;5;28;01mfor\u001b[39;00m var, ncfile \u001b[38;5;129;01min\u001b[39;00m \u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mfiles\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mitems()}\n\u001b[1;32m    174\u001b[0m \u001b[38;5;66;03m# Soil properties\u001b[39;00m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msoils \u001b[38;5;241m=\u001b[39m {soil: props \u001b[38;5;28;01mfor\u001b[39;00m soil, props \u001b[38;5;129;01min\u001b[39;00m config[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msoils\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mitems()}\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'files'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Ku = Ku_model()\n",
+    "Ku = KuEnhanced()\n",
     "Ku.initialize('cache_alaska/Ku_example_config.toml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "e0725704-dd21-4cce-aaa4-08c6f16e85db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation for 1980-1989\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "assignment destination is read-only",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[119], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m temp_amplitude \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mbroadcast_to(np\u001b[39m.\u001b[39marray(row[\u001b[39m'\u001b[39m\u001b[39mtemp_amp\u001b[39m\u001b[39m'\u001b[39m]), Ku\u001b[39m.\u001b[39mgrid_shape(\u001b[39m0\u001b[39m))\n\u001b[1;32m     16\u001b[0m snow_depth \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mbroadcast_to(np\u001b[39m.\u001b[39marray(row[\u001b[39m'\u001b[39m\u001b[39msnow_h\u001b[39m\u001b[39m'\u001b[39m]), Ku\u001b[39m.\u001b[39mgrid_shape(\u001b[39m0\u001b[39m))\n\u001b[0;32m---> 18\u001b[0m Ku\u001b[39m.\u001b[39;49mset_value(\u001b[39m'\u001b[39;49m\u001b[39mair_temperature\u001b[39;49m\u001b[39m'\u001b[39;49m, air_temperature)\n\u001b[1;32m     20\u001b[0m Ku\u001b[39m.\u001b[39mair_temperature \u001b[39m=\u001b[39m air_temperature\n\u001b[1;32m     21\u001b[0m Ku\u001b[39m.\u001b[39mtemperature_amplitude \u001b[39m=\u001b[39m temp_amplitude\n",
+      "File \u001b[0;32m~/dev/mambaforge/envs/pfcase/lib/python3.9/site-packages/pymt/framework/bmi_mapper.py:248\u001b[0m, in \u001b[0;36mGridMapperMixIn.set_value\u001b[0;34m(self, name, *args, **kwds)\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Set values for a variable.\u001b[39;00m\n\u001b[1;32m    239\u001b[0m \u001b[39mset_value(name, value)\u001b[39;00m\n\u001b[1;32m    240\u001b[0m \u001b[39mset_value(name, mapfrom=self, nomap=None)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    245\u001b[0m \u001b[39m    Name of the destination values.\u001b[39;00m\n\u001b[1;32m    246\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    247\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 248\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m(GridMapperMixIn, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49mset_value(name, \u001b[39m*\u001b[39;49margs)\n\u001b[1;32m    250\u001b[0m mapfrom \u001b[39m=\u001b[39m kwds\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mmapfrom\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mself\u001b[39m)\n\u001b[1;32m    251\u001b[0m nomap \u001b[39m=\u001b[39m kwds\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mnomap\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/dev/mambaforge/envs/pfcase/lib/python3.9/site-packages/pymt/framework/bmi_bridge.py:340\u001b[0m, in \u001b[0;36m_BmiCap.set_value\u001b[0;34m(self, name, val)\u001b[0m\n\u001b[1;32m    338\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset_value\u001b[39m(\u001b[39mself\u001b[39m, name, val):\n\u001b[1;32m    339\u001b[0m     val \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(val)\u001b[39m.\u001b[39mreshape((\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,))\n\u001b[0;32m--> 340\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbmi\u001b[39m.\u001b[39;49mset_value(name, val)\n",
+      "File \u001b[0;32m~/dev/mambaforge/envs/pfcase/lib/python3.9/site-packages/permamodel/components/bmi_Ku.py:234\u001b[0m, in \u001b[0;36mBmiKuModel.set_value\u001b[0;34m(self, var, values)\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Set the value of a variable.\"\"\"\u001b[39;00m\n\u001b[1;32m    233\u001b[0m vals \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mreshape(values, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_grid_shape)\n\u001b[0;32m--> 234\u001b[0m \u001b[39mgetattr\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_model, var)\u001b[39m.\u001b[39;49mvalues[:] \u001b[39m=\u001b[39m vals\n",
+      "\u001b[0;31mValueError\u001b[0m: assignment destination is read-only"
+     ]
+    }
+   ],
+   "source": [
+    "ku_results = pd.DataFrame(columns = ['active_layer', 'temperature'], index = input_df.index)\n",
+    "\n",
+    "for start, end in [(1980,1989), (2010,2019)]:\n",
+    "    print('Simulation for {}-{}'.format(start,end))\n",
+    "\n",
+    "    input_data = input_df[(input_df.index.year>=start) & (input_df.index.year<=end)]    \n",
+    "\n",
+    "    Ku = KuEnhanced()\n",
+    "    Ku.initialize('cache_alaska/Ku_example_config.toml')\n",
+    "\n",
+    "    shape = np.insert(Ku.grid_shape([0]), 0, 10)\n",
+    "\n",
+    "    for index, row in input_data.iterrows():\n",
+    "        air_temperature = np.broadcast_to(np.array(row['temp_mean']), Ku.grid_shape(0))\n",
+    "        temp_amplitude = np.broadcast_to(np.array(row['temp_amp']), Ku.grid_shape(0))\n",
+    "        snow_depth = np.broadcast_to(np.array(row['snow_h']), Ku.grid_shape(0))\n",
+    "\n",
+    "        Ku.set_value('air_temperature', air_temperature)\n",
+    "\n",
+    "        Ku.air_temperature = air_temperature\n",
+    "        Ku.temperature_amplitude = temp_amplitude\n",
+    "        Ku.snow_depth = snow_depth\n",
+    "\n",
+    "        Ku.update()\n",
+    "\n",
+    "        for var in Ku.get_input_var_names():\n",
+    "            print(var, Ku.get_value(var))\n",
+    "\n",
+    "        break\n",
+    "\n",
+    "        ku_results.loc[index] = Ku.get_value('active_layer_thickness')[0]\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "cc7baa40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3], dtype=int32)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ku.grid_shape(0)"
+   ]
   }
  ],
  "metadata": {
@@ -585,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
