Continue modifying notebooks

--- a/permafrost-ku-enhanced.ipynb
+++ b/permafrost-ku-enhanced.ipynb
@@ -779,6 +779,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 132,
+   "id": "d6a81159",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# experiment inputs\n",
+    "experiment = {\n",
+    "    '1980-1989':[-3.849, 16.99, 0.355],\n",
+    "    '2010-2019':[-2.563, 16.234, 0.247],\n",
+    "    'change of annual mean temperature': [-2.563, 16.99, 0.355],\n",
+    "    'change of temperature amplitude':[-3.849, 16.234, 0.355],\n",
+    "    'change of snow thickness': [-3.849, 16.99, 0.247],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "0cdc14f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result for 1980-1989: 1.103m\n",
+      "Result for 2010-2019: 1.107m\n",
+      "Result for change of annual mean temperature: 1.194m\n",
+      "Result for change of temperature amplitude: 1.054m\n",
+      "Result for change of snow thickness: 1.06m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run experiments\n",
+    "for key, value in experiment.items():    \n",
+    "    Ku = BmiKuModel()\n",
+    "    Ku.initialize('cache_alaska/Ku_example_config.toml')\n",
+    "\n",
+    "    air_temperature = xr.DataArray([value[0]])\n",
+    "    temp_datacube = Ku._model.broadcast(air_temperature)\n",
+    "    Ku._model.air_temperature = temp_datacube\n",
+    "\n",
+    "    temp_amplitude = xr.DataArray([value[1]])\n",
+    "    amp_datacube = Ku._model.broadcast(temp_amplitude)\n",
+    "    Ku._model.temperature_amplitude = amp_datacube\n",
+    "\n",
+    "    snow_depth = xr.DataArray([value[2]])\n",
+    "    snow_datacube = Ku._model.broadcast(snow_depth)\n",
+    "    Ku._model.snow_thickness = snow_datacube\n",
+    "\n",
+    "    Ku.update()\n",
+    "\n",
+    "    print('Result for {}: {}m'.format(key, Ku._model.active_layer_thickness.values[0,0].round(3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "aea508c8",
    "metadata": {},
