--- a/permafrost_alaska.ipynb
+++ b/permafrost_alaska.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "e1cb1305",
    "metadata": {},
    "outputs": [],
@@ -922,10 +922,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f0274eb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "Ku model component: Initializing...\n",
+      "Result for 1980-1989: 0.989m\n",
+      " \n",
+      "Ku model component: Initializing...\n",
+      "Result for 2010-2019: 0.992m\n",
+      " \n",
+      "Ku model component: Initializing...\n",
+      "Result for change of annual mean temperature: 1.076m\n",
+      " \n",
+      "Ku model component: Initializing...\n",
+      "Result for change of temperature amplitude: 0.947m\n",
+      " \n",
+      "Ku model component: Initializing...\n",
+      "Result for change of snow thickness: 0.943m\n"
+     ]
+    }
+   ],
    "source": [
     "# run experiments\n",
     "for key, value in experiment.items():    \n",
